[metadata]
name = marlcacc
version = attr: marlcacc.version.__version__
description = "Multi-agent Reinforcement Learning for Cooperative Adaptive Cruise Control (CACC)"
author = "Sicong Jiang and Seongjin Choi"
license = "MIT"
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = marlcacc
install_requires = 
    gym>=0.19.0
    pyglet>=1.5.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = False

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
marlcacc = py.typed

[flake8]
max-line-length = 160